@@ -197,8 +197,8 @@ COMMANDJOURNALS=COMMAND_JOURNALS
 COMMAND_JOURNALS=\
 Usage      : [JOURNAL_NAME] (REVIEW/TRANSFER) [MSG NUMBER]\n\r\
 Example    : list ideas\n\r\
-Example    : ideas review 10\n\r\
-Example    : ideas transfer 10 bugs\n\r\
+Example    : idea review 10\n\r\
+Example    : idea transfer 10 bug\n\r\
 A command journal is a special kind of command that can be created and \
 modified from the MUDGrinder Control Panel or the coffeemud.ini file.  It \
 is a special kind of journal that users can write to from the command line \
