@@ -803,7 +803,7 @@ Example  : instrumentmake piccolo\n\r\
          : instrumentmake learn flute\n\r\
 This skill allows a player to craft musical instruments, such as flutes and \
 guitars.  The extent of the items which can be crafted expands as the player goes up in \
-level.  The player make also learn to make new found instruments, provided a blank recipe \
+level.  The player may also learn to make new found instruments, provided a blank recipe \
 page or a recipe book with blank pages is in his or her inventory. \
 To begin making a new item, the player must have placed the material \
 he or she wishes to make the item from on the ground. \
