@@ -1024,7 +1024,8 @@ Example : equipment long\n\r\
 Short(s): eq\n\r\
 List the items you are wearing, wielding, holding, or are \
 allowing to float nearby.  Use the LONG modifier to also \
-see wearing positions you may not have occupied.
+see wearing positions you may not have occupied, and anything \
+being worn at other layers, including piercings and tattoos.
 
 LONGLOOK=EXAMINE
 EXAMINE=\
