@@ -1125,7 +1125,7 @@ BLEEDING=\
 Bleeding is when there are open wounds from which the fluid of life runs freely.  This \
 is not a good state to be in.  Those who are bleeding are weak, and do not regain health. \
 Their maximum movement and mana are both reduced to reflect their hit points, and hit \
-points are not regained while the bleeding continues.  This conditions is cured in \
+points and mana are not regained while the bleeding continues.  This conditions is cured in \
 several ways.  One is to wait for the bleeding to stop, which may take awhile.  Another \
 way is to be healed magically until you are above 50% hit points.  A final way is simply \
 to be bandaged by the bandaging skill.
@@ -1353,8 +1353,9 @@ COFFEE=Coffee is a black, bitter liquid usually served hot.  It is made by \
 taking the dried, crushed beans from the coffee plant and soaking them in \
 water until saturation is reached.  Java is a common slang word for coffee.
 
-BANK=The Bank is where money can be deposited and withdrawn using the DEPOSIT \
-and WITHDRAW commands.  You can also borrow money using the BORROW command. \
+BANK=The Bank is where money and items can be deposited and withdrawn using \
+the DEPOSIT and WITHDRAW commands.  You can also borrow money using the \
+BORROW command. \
 Use LIST to see interest and balance information.
 
 MATE=REMORTING
